# gadgetron

./: .dockerignore  CMakeLists.txt  Dockerfile  environment.yml  justfile
apps/gadgetron/: CMakeLists.txt  Config.cpp  Config.h  ErrorHandler.h  Loader.cpp  Loader.h  StreamConsumer.h  initialization.cpp  main.cpp  storage.cpp  storage.h  system_info.cpp  system_info.h
apps/gadgetron/connection/: Core.cpp  Core.h  Handlers.cpp  SocketStreamBuf.cpp
apps/gadgetron/nodes/: Parallel.cpp  PureStream.cpp  Stream.cpp
apps/gadgetron/test/: storage_test.cpp
cmake/: CMakeLists.txt
core/: CMakeLists.txt  Channel.h  Context.h  Gadget.h  IsmrmrdContextVariables.cpp  IsmrmrdContextVariables.h  LegacyACE.h  MPMCChannel.h  Message.h  Message.hpp  Node.h  TypeTraits.h  Types.h  gadgetron_paths.cpp
core/config/: distributed_default.xml  distributed_generic_default.xml  distributed_image_default.xml
core/distributed/: AcquisitionDistributor.cpp  AcquisitionDistributor.h  BufferDistributor.cpp  BufferDistributor.h
core/io/: primitives.h  primitives.hpp
core/parallel/: Fanout.h
gadgets/: CMakeLists.txt
gadgets/T1/: T1MocoGadget.cpp
gadgets/T1/config/: MOLLI_T1_Moco.xml  MOLLI_T1_Moco_istore.xml
gadgets/bart/: BART_Recon.xml  BART_Recon_cloud.xml  BART_Recon_cloud_Standard.xml  CMakeLists.txt  bartgadget.cpp  bartgadget.h
gadgets/cartesian/: CMakeLists.txt  CartesianToGenericGadget.h
gadgets/cmr/: CMakeLists.txt  CmrCartesianKSpaceBinningCineGadget.cpp  CmrCartesianKSpaceBinningCineGadget.h  CmrParametricMappingGadget.cpp  CmrParametricMappingGadget.h  CmrParametricT1SRMappingGadget.cpp  CmrParametricT1SRMappingGadget.h  CmrParametricT2MappingGadget.cpp  CmrParametricT2MappingGadget.h  CmrRealTimeLAXCineAIAnalysisGadget.h  PureCmrCartesianKSpaceBinningCineGadget.cpp  PureCmrCartesianKSpaceBinningCineGadget.h
gadgets/debugging/: AcquisitionPassthroughGadget.h  CMakeLists.txt  CplxDumpGadget.h  ImageWriterGadget.h  PseudoReplicatorGadget.cpp  PseudoReplicatorGadget.h  RateLimitGadget.cpp  RateLimitGadget.h  WhiteNoiseInjectorGadget.h
gadgets/dicom/: CMakeLists.txt  DicomFinishGadget.h  DicomImageWriter.cpp  DicomImageWriter.h  dicom.xml  dicom_ismrmrd_utility.cpp  dicom_ismrmrd_utility.h
gadgets/epi/: CMakeLists.txt  CutXGadget.h  EPICorrGadget.h  EPIPackNavigatorGadget.h  EPIReconXGadget.h  FFTXGadget.h  OneEncodingGadget.h  epi.xml  epi_gtplus_grappa.xml
gadgets/examples/: ImageInverter.cpp  ImageLayerer.cpp
gadgets/examples/config/: external_connect_example.xml  external_equivalent_example.xml  external_example.xml  external_julia_acquisition_example.xml  external_matlab_acquisition_example.xml  external_matlab_bucket_example.xml  external_matlab_buffer_example.xml  external_matlab_tiny_example.xml  external_python_acquisition_example.xml  external_python_bucket_example.xml  external_python_buffer_example.xml  (+1 more)
gadgets/fatwater/: CMakeLists.txt  FatWaterGadget.h
gadgets/gpu/: CMakeLists.txt
gadgets/grappa/: AcquisitionFanout.h  ChannelReorderer.cpp  ChannelReorderer.h  ImageAccumulator.cpp  SliceAccumulator.cpp  Unmixing.cpp  WeightsCalculator.cpp
gadgets/hyper/: CMRT.xml  CMRT3D.xml  CMRT3DGadget.h  CMRTGadget.h  CMakeLists.txt  FS-CSI.xml  NFFT2D.xml  NFFT2DGadget.h  gpuCSICoilEstimationGadget.h
gadgets/interventional_mri/: CMakeLists.txt  DeviceChannelSplitterGadget.h  grappa_device.xml  grappa_device_cpu.xml
gadgets/moco/: CMakeLists.txt  RegistrationAveragingGadget.h  RegistrationScatteringGadget.h  cpuRegistrationAveragingGadget.h  gpuRegistrationAveragingGadget.h  gpuRegistrationScatteringGadget.h
gadgets/mri_core/: AccumulatorGadget.cpp  AccumulatorGadget.h  AcquisitionAccumulateTriggerGadget.cpp  AcquisitionAccumulateTriggerGadget.h  AsymmetricEchoAdjustROGadget.cpp  AsymmetricEchoAdjustROGadget.h  AugmentImageMetadataGadget.cpp  AugmentImageMetadataGadget.h  AutoScaleGadget.cpp  BucketToBufferGadget.cpp  BucketToBufferGadget.h  CMakeLists.txt  CoilComputationGadget.h  CoilReductionGadget.cpp  CoilReductionGadget.h  CombineGadget.cpp  ComplexToFloatGadget.cpp  ComplexToFloatGadget.h  CropAndCombineGadget.h  DenoiseGadget.cpp  DenoiseGadget.h  ExtractGadget.cpp  ExtractGadget.h  FFTGadget.cpp  FFTGadget.h  FlagTriggerGadget.cpp  FlagTriggerGadget.h  FloatToFixPointGadget.cpp  FloatToFixPointGadget.h  FlowPhaseSubtractionGadget.cpp  FlowPhaseSubtractionGadget.h  ImageAccumulatorGadget.h  ImageArraySendMixin.h  ImageArraySendMixin.hpp  ImageArraySplitGadget.cpp  ImageArraySplitGadget.h  ImageFFTGadget.h  ImageFinishGadget.h  ImageIndexGadget.cpp  ImageResizingGadget.h  (+16 more)
gadgets/mri_noncartesian/: CMakeLists.txt  CPUGriddingReconGadget.h  GriddingReconGadget.h  GriddingReconGadgetBase.h  GriddingReconGadgetBase.hpp  NonCartesianTools.h
gadgets/plplot/: CMakeLists.txt  Generic_Cartesian_Grappa_SNR_CoilQA.xml  NoiseCovariancePlottingGadget.cpp  NoiseCovariancePlottingGadget.h
gadgets/pmri/: CMakeLists.txt  gpuBufferSensePrepGadget.cpp  gpuBufferSensePrepGadget.h  gpuCgKtSenseGadget.h  gpuCgSenseGadget.h  gpuCgSpiritGadget.h  gpuGenericSensePrepGadget.cpp  gpuGenericSensePrepGadget.h  gpuLALMSenseGadget.h  gpuNlcgSenseGadget.h  gpuOsSenseGadget.h  gpuSbSenseGadget.h
gadgets/python/: CMakeLists.txt  PythonGadget.h
gadgets/radial/: CMakeLists.txt  RadialPhaseCorrectionGadget.h  gpuRadialPrepGadget.h  gpuRadialSensePrepGadget.h  gpuRadialSpiritPrepGadget.h  gpuRetroGatedSensePrepGadget.h
gadgets/spiral/: SpiralToGenericGadget.cpp  SpiralToGenericGadget.h  gpuSpiralDeblurGadget.cpp  gpuSpiralDeblurGadget.h  gpuSpiralSensePrepGadget.cpp  gpuSpiralSensePrepGadget.h
libmrd/: CMakeLists.txt
libmrd/include/: gadgetron-arrays.h
mrd/: CMakeLists.txt
mrd/ndarray/: CMakeLists.txt  ndarray_custom.h
toolboxes/log/: CMakeLists.txt
toolboxes/python/: CMakeLists.txt  python_IsmrmrdImageArray_converter.h  python_IsmrmrdReconData_converter.h  python_converters.h  python_hoNDArray_converter.h  python_ismrmrd_converter.h  python_mrd_converters.h  python_numpy_wrappers.h  python_set_converter.h  python_toolbox.h  python_vector_converter.h
(+281 files in other folders)
