# TODO Joe: Remove this file entirely

# include_directories(./)

# include(FetchContent)
# FetchContent_Declare(
#     mrd2
#     GIT_REPOSITORY https://github.com/ismrmrd/mrd.git
#     GIT_TAG 3e083f6b81d6c635d63ba1a65abadd01f0edbab5 # naegelejd/gadgetron-update
#     SOURCE_SUBDIR cpp/
#     EXCLUDE_FROM_ALL
#     # OVERRIDE_FIND_PACKAGE
# )
# FetchContent_MakeAvailable(mrd2)

# target_link_libraries(mrd gadgetron_toolbox_cpucore)